# mo-image-viewer

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
Mo图.app/Contents/: Info.plist
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  filesystem.rs  image.rs  mod.rs  thumbnail.rs  window.rs
src/components/: BackgroundToggle.tsx  ContextMenu.tsx  FolderSidebar.tsx  ImageCanvas.tsx  MiniMap.tsx  SettingsDialog.tsx  ThumbnailGrid.tsx
src/hooks/: useAcceleratedFlip.ts  useImageNavigation.ts  usePreloader.ts  useSettings.ts  useZoom.ts
src/store/: appStore.ts
src/types/: index.ts
src/utils/: imageFormats.ts
