[package]
name = "mo-image-viewer"
version = "1.3.1"
description = "Mo图 - A minimal cross-platform image viewer"
authors = ["wangxuan"]
edition = "2021"

[lib]
name = "mo_image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "webp", "tiff", "ico"] }
base64 = "0.22"
walkdir = "2"
natord = "1.0"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
